Revision history for lua-TestMore

0.3.3
	shadow _ENV

0.3.2  Sat Jan 31 12:30:00 2015
	test suite aligned with Lua 5.2.2/5.2.3
	remove dependency on string metatable
	add a leading comment in subtest
	compat Lua 5.3
	add a test suite for Lua 5.3

0.3.1  Tue Dec  4 16:30:00 2012
	test suite aligned with LuaJIT 2.0.0
	fix issues #2, #3, #5, #6
	fix is_deeply when table with cycle
	add subtest

0.3.0  Sat Mar  3 22:30:00 2012
	work with Lua 5.2.0
	add LuaDist support
	INCOMPATIBILITY : now, the use of the following idiom is mandatory
		local testmore = require 'Test.More'

0.2.4  Wed Aug 24 21:30:00 2011
	add Test.Builder.SocketOutput (request from Eric Wind for Corona SDK)
	improve coverage of Lua 5.2.0 beta

0.2.3  Fri Nov 26 10:30:00 2010
	fix compatibility with Lua 5.2.0 alpha

0.2.2  Sat May 22 11:30:00 2010
	fix compatibility with Lua 5.2.0 work3

0.2.1  Sun Mar 28 11:30:00 2010
	fix compatibility with Lua 5.2
	make install

0.2.0  Fri Oct 16 14:30:00 2009
	add a diagnostic with file & line number
	complete is_deeply()
	fix some portability issues

0.1.0  Thu Oct  8 12:30:00 2009
	First release